@@ -2,24 +2,22 @@ package com.ezh.Inventory.stock.service;
 
 import com.ezh.Inventory.items.repository.ItemRepository;
 import com.ezh.Inventory.stock.dto.*;
-import com.ezh.Inventory.stock.entity.*;
-import com.ezh.Inventory.stock.repository.StockAdjustmentRepository;
+import com.ezh.Inventory.stock.entity.MovementType;
+import com.ezh.Inventory.stock.entity.Stock;
+import com.ezh.Inventory.stock.entity.StockBatch;
+import com.ezh.Inventory.stock.entity.StockLedger;
 import com.ezh.Inventory.stock.repository.StockBatchRepository;
 import com.ezh.Inventory.stock.repository.StockLedgerRepository;
 import com.ezh.Inventory.stock.repository.StockRepository;
 import com.ezh.Inventory.utils.common.CommonResponse;
-import com.ezh.Inventory.utils.common.DocPrefix;
-import com.ezh.Inventory.utils.common.DocumentNumberUtil;
 import com.ezh.Inventory.utils.common.Status;
 import com.ezh.Inventory.utils.exception.BadRequestException;
 import com.ezh.Inventory.utils.exception.CommonException;
-import com.ezh.Inventory.utils.exception.ResourceNotFoundException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -27,7 +25,6 @@ import org.springframework.transaction.annotation.Transactional;
 import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.util.ArrayList;
-import java.util.Date;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -41,7 +38,6 @@ public class StockServiceImpl implements StockService {
 
     private final StockRepository stockRepository;
     private final StockLedgerRepository stockLedgerRepository;
-    private final StockAdjustmentRepository stockAdjustmentRepository;
     private final StockBatchRepository stockBatchRepository;
     private final ItemRepository itemRepository;
 
@@ -181,168 +177,6 @@ public class StockServiceImpl implements StockService {
 
     @Override
     @Transactional
-    public CommonResponse<?> createStockAdjustment(StockAdjustmentCreateDto dto) throws CommonException {
-        Long tenantId = getTenantIdOrThrow();
-
-        // 1. Create and SAVE the Header first
-        // REMOVED: .mode(dto.getMode()) -> We now rely purely on ReasonType
-        StockAdjustment adjustment = StockAdjustment.builder()
-                .tenantId(tenantId)
-                .warehouseId(dto.getWarehouseId())
-                .adjustmentNumber(DocumentNumberUtil.generate(DocPrefix.ADJ))
-                .adjustmentDate(new Date())
-                .status(AdjustmentStatus.COMPLETED)
-                .reference(dto.getReference())
-                .remarks(dto.getRemarks())
-                .reasonType(dto.getReasonType())
-                .build();
-
-        adjustment = stockAdjustmentRepository.save(adjustment);
-
-        List<StockAdjustmentItem> adjustmentItems = new ArrayList<>();
-
-        // 2. Process Each Line Item
-        for (StockAdjustmentItemDto itemDto : dto.getItems()) {
-
-            // A. Fetch Current Stock State
-            Stock stock = stockRepository
-                    .findByItemIdAndWarehouseIdAndTenantId(itemDto.getItemId(), dto.getWarehouseId(), tenantId)
-                    .orElse(createNewStock(itemDto.getItemId(), dto.getWarehouseId()));
-
-            int systemQty = stock.getClosingQty();
-            int finalCountedQty; // The actual physical stock after adjustment
-            int difference;      // The change amount (can be negative or positive)
-
-            // B. Calculate Logic based on REASON TYPE only
-            switch (dto.getReasonType()) {
-                case DAMAGE:
-                case EXPIRED:
-                case LOST:
-                    // Logic: REMOVE specific quantity
-                    // Example: System 100, Input 5 (Damaged) -> Final 95, Diff -5
-                    difference = -itemDto.getQuantity();
-                    finalCountedQty = systemQty - itemDto.getQuantity();
-                    break;
-
-                case FOUND_EXTRA:
-                    // Logic: ADD specific quantity
-                    // Example: System 100, Input 2 (Found) -> Final 102, Diff +2
-                    difference = itemDto.getQuantity();
-                    finalCountedQty = systemQty + itemDto.getQuantity();
-                    break;
-
-                case AUDIT_CORRECTION:
-                    // Logic: ABSOLUTE / REPLACE (Set to actual count)
-                    // Example: System 100, Input 90 (Actual Count) -> Final 90, Diff -10
-                    finalCountedQty = itemDto.getQuantity();
-                    difference = finalCountedQty - systemQty;
-                    break;
-
-                default:
-                    throw new BadRequestException("Unsupported Adjustment Reason: " + dto.getReasonType());
-            }
-
-            if (finalCountedQty < 0) {
-                throw new BadRequestException("Adjustment results in negative stock for Item ID: " + itemDto.getItemId());
-            }
-
-            // C. Create the Line Item Entity
-            StockAdjustmentItem lineItem = StockAdjustmentItem.builder()
-                    .stockAdjustment(adjustment)
-                    .itemId(itemDto.getItemId())
-                    .systemQty(systemQty)
-                    .countedQty(finalCountedQty)
-                    .differenceQty(difference)
-                    .reasonType(dto.getReasonType())
-                    .build();
-
-            adjustmentItems.add(lineItem);
-
-            // D. UPDATE ACTUAL INVENTORY
-            if (difference != 0) {
-                MovementType movementType = (difference > 0) ? MovementType.IN : MovementType.OUT;
-
-                StockUpdateDto updateDto = StockUpdateDto.builder()
-                        .itemId(itemDto.getItemId())
-                        .warehouseId(dto.getWarehouseId())
-                        .quantity(Math.abs(difference)) // Use absolute value for update service
-                        .transactionType(movementType)
-                        .referenceType(ReferenceType.ADJUSTMENT)
-                        .referenceId(adjustment.getId())
-                        .unitPrice(stock.getAverageCost())
-                        .batchNumber(itemDto.getBatchNumber())
-                        .build();
-
-                // Assuming your stockService handles the math based on IN/OUT
-                updateStock(updateDto);
-            }
-        }
-
-        // 3. Update the Header with the list of items
-        adjustment.setAdjustmentItems(adjustmentItems);
-        stockAdjustmentRepository.save(adjustment);
-
-        return CommonResponse.builder()
-                .status(Status.SUCCESS)
-                .message("Stock Adjustment Created Successfully")
-                .id(String.valueOf(adjustment.getId()))
-                .build();
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public Page<StockAdjustmentListDto> getAllStockAdjustments(StockFilterDto filter, Integer page, Integer size) {
-        Long tenantId = getTenantIdOrThrow();
-        Pageable pageable = PageRequest.of(page, size, Sort.by("createdAt").descending());
-
-        // Assuming you have a basic findAll or specification
-        Page<StockAdjustment> adjustments = stockAdjustmentRepository.findAllByTenantId(getTenantIdOrThrow(), pageable);
-
-        return adjustments.map(adj -> StockAdjustmentListDto.builder()
-                .id(adj.getId())
-                .adjustmentNumber(adj.getAdjustmentNumber())
-                .adjustmentDate(adj.getAdjustmentDate())
-                .status(adj.getStatus())
-                .warehouseId(adj.getWarehouseId())
-                .reference(adj.getReference())
-                .totalItems(adj.getAdjustmentItems().size())
-                .build());
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public StockAdjustmentDetailDto getStockAdjustmentById(Long id) {
-        StockAdjustment adjustment = stockAdjustmentRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Adjustment not found"));
-
-        // Map Items
-        List<ItemDetail> itemDetails = adjustment.getAdjustmentItems().stream()
-                .map(item -> {
-                    String itemName = itemRepository.findNameById(item.getItemId()).orElse("Unknown Item");
-                    return ItemDetail.builder()
-                            .itemId(item.getItemId())
-                            .itemName(itemName)
-                            .systemQty(item.getSystemQty())
-                            .countedQty(item.getCountedQty())
-                            .differenceQty(item.getDifferenceQty())
-                            .reasonType(item.getReasonType())
-                            .build();
-                }).collect(Collectors.toList());
-
-        return StockAdjustmentDetailDto.builder()
-                .id(adjustment.getId())
-                .adjustmentNumber(adjustment.getAdjustmentNumber())
-                .adjustmentDate(adjustment.getAdjustmentDate())
-                .status(adjustment.getStatus())
-                .warehouseId(adjustment.getWarehouseId())
-                .remarks(adjustment.getRemarks())
-                .reference(adjustment.getReference())
-                .items(itemDetails)
-                .build();
-    }
-
-    @Override
-    @Transactional
     public List<ItemStockSearchDto> searchItemsWithBatches(String query, Long warehouseId) {
 
         // 1. Fetch Flat Data
@@ -355,7 +189,7 @@ public class StockServiceImpl implements StockService {
         // 3. Transform into Nested DTOs
         return groupedData.values().stream().map(batchList -> {
             // Since grouped by ID, Item info is same for all rows in 'batchList'
-            StockSearchProjection first = batchList.get(0);
+            StockSearchProjection first = batchList.getFirst();
 
             // Map the list of batches
             List<BatchDetailDto> batchDtos = batchList.stream()
